lib/tests/fixtures/compiler/parser/return_in_class_with_value.pp
class foo {
    if true {
        return foo
    }
}
